--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
                         </h2>
                         <p class="lead lh-lg text-wrap hero-content-text" style="width: 26rem">
                             Join a community of food enthusiasts and discover new recipes on RecipeShare</p>
-                            <a class="btn btn-lg btn-primary" href="#" style="background-color:#1685F0;">Join RecipeShare</a>
+                            <a class="btn btn-lg btn-primary" href="/recipes" style="background-color:#1685F0;">Join RecipeShare</a>
                     </div>
                 </div>
             </div>
