--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #fff;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/images/logo.png" alt="logo" width="200"></a>
+      <a class="navbar-brand" href="/"><img src="/images/logo.png" alt="logo" width="200"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
